Implemented additional parameters and improved parsing.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ aws.redshift.jdbc-url=jdbc:redshift://${REDSHIFT_HOST}:${REDSHIFT_PORT}/${REDSHI
 aws.redshift.driver-class-name=com.amazon.redshift.jdbc42.Driver
 aws.redshift.username=${REDSHIFT_USERNAME}
 aws.redshift.password=${REDSHIFT_PASSWORD}
+
+# Store Configuration #
+store.resultLimit=100
