Store classes are released from spring management.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,5 @@ aws.redshift.driver-class-name=com.amazon.redshift.jdbc42.Driver
 aws.redshift.username=${REDSHIFT_USERNAME}
 aws.redshift.password=${REDSHIFT_PASSWORD}
 
-# Store Configuration #
-store.resultLimit=100
+# Store Properties #
+store.sql.limit=2
