--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,5 @@ aws.redshift.username=${REDSHIFT_USERNAME}
 aws.redshift.password=${REDSHIFT_PASSWORD}
 
 # Store Properties #
-store.sql.limit=2
+store.sql.aurora.limit=2
+store.sql.redshift.limit=3
