--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
+# H2 Database Properties #
+spring.datasource.jdbc-url=jdbc:h2:mem:users
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=${H2_USERNAME}
+spring.datasource.password=${H2_PASSWORD}
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
 # AWS Aurora MySQL Data Source #
 aws.aurora.jdbc-url=jdbc:mysql://${AURORA_HOST}:${AURORA_PORT}/${AURORA_DB}
 aws.aurora.driver-class-name=com.mysql.cj.jdbc.Driver
