--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,26 @@
 # H2 Database Properties #
-spring.datasource.jdbc-url=jdbc:h2:mem:users
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=${H2_USERNAME}
-spring.datasource.password=${H2_PASSWORD}
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2db.jdbc-url=jdbc:h2:file:./db/auth
+spring.h2db.driver-class-name=org.h2.Driver
+spring.h2db.username=${H2_USERNAME}
+spring.h2db.password=${H2_PASSWORD}
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
+
+spring.jpa.hibernate.ddl-auto=none
+spring.sql.init.mode=always
+
+# Admin username/password
+admin.username=${ADMIN_USERNAME}
+admin.password=${ADMIN_PASSWORD}
+
+# Token duration (in minutes)
+jwt.duration=3
+
+# Keys for JWT token encoding/decoding
+rsa.private-key=classpath:certs/private.pem
+rsa.public-key=classpath:certs/public.pem
 
 # AWS Aurora MySQL Data Source #
 aws.aurora.jdbc-url=jdbc:mysql://${AURORA_HOST}:${AURORA_PORT}/${AURORA_DB}
