Added decryption/encryption in request/response data.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,9 @@ jwt.duration=3
 rsa.private-key=classpath:certs/private.pem
 rsa.public-key=classpath:certs/public.pem
 
+# Shared Secret Key (for data encryption/decryption)
+cipher.shared-key=${SHARED_SECRET}
+
 # AWS Aurora MySQL Data Source #
 aws.aurora.jdbc-url=jdbc:mysql://${AURORA_HOST}:${AURORA_PORT}/${AURORA_DB}
 aws.aurora.driver-class-name=com.mysql.cj.jdbc.Driver
